methods.basics.Methods.scala.error
Compilation error:
Methods:5: error: not found: value prendbiscuit
  prendbiscuit()
  ^